--- a/Challenge_ONE_Data_Science_Telecom_X_Parte2.ipynb
+++ b/Challenge_ONE_Data_Science_Telecom_X_Parte2.ipynb
@@ -37,7 +37,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Este cuaderno es parte del curso Challenge  ONE Data Science Telecom. Como asistente de análisis de datos en Telecom X el desafío es recopilar, procesar y analizar los datos, utilizando Python y sus principales bibliotecas para extraer información valiosa que ayude al equipo de Data Science a avanzar en modelos predictivos y desarrollar estrategias para reducir la evasión de clientes (*churn*)."
+        "Este cuaderno forma parte del curso Challenge ONE Data Science Telecom. En el contexto de este desafío, se asume el rol de Asistente de Análisis de Datos en la empresa Telecom X.\n",
+        "\n",
+        "El objetivo principal es recopilar, procesar y analizar datos utilizando Python y sus bibliotecas más relevantes. A través de este análisis, se busca extraer información significativa que sirva de apoyo al equipo de Data Science en el desarrollo de modelos predictivos y en la formulación de estrategias orientadas a reducir la tasa de evasion de clientes (churn).\n",
+        "\n"
       ],
       "metadata": {
         "id": "00EnnxB7vZhX"
@@ -79,7 +82,7 @@
       "metadata": {
         "id": "OLBDH6FfG0-o"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
